# jsonschema-specifications

./: .coveragerc  .pre-commit-config.yaml  README.rst  noxfile.py  pyproject.toml
.github/: SECURITY.md
.github/workflows/: ci.yml
docs/: api.rst  conf.py  index.rst  requirements.in  requirements.txt  spelling-wordlist.txt
jsonschema_specifications/: __init__.py  _core.py
jsonschema_specifications/tests/: test_jsonschema_specifications.py
tests/: test_jsonschema_specifications.py
