[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "jsonschema-specifications"
description = "The JSON Schema meta-schemas and vocabularies, exposed as a Registry"
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = [
    "validation",
    "data validation",
    "jsonschema",
    "json",
    "json schema",
]
authors = [
  {email = "Julian+jsonschema-specifications@GrayVines.com"},
  {name = "Julian Berman"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: File Formats :: JSON :: JSON Schema",
]
dynamic = ["version"]

dependencies = [
  "referencing>=0.28.0",
  "importlib_resources>=1.4.0;python_version<'3.9'",
]

[project.urls]
Documentation = "https://jsonschema-specifications.readthedocs.io/"
Homepage = "https://github.com/python-jsonschema/jsonschema-specifications"
Issues = "https://github.com/python-jsonschema/jsonschema-specifications/issues/"
Funding = "https://github.com/sponsors/Julian"
Source = "https://github.com/python-jsonschema/jsonschema-specifications"

[tool.coverage.html]
show_contexts = true
skip_covered = false

[tool.coverage.run]
branch = true
source = ["jsonschema-specifications"]
dynamic_context = "test_function"

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "\\s*\\.\\.\\.\\s*",
]
fail_under = 100
show_missing = true
skip_covered = true

[tool.doc8]
ignore = [
    "D001",  # one sentence per line, so max length doesn't make sense
]

[tool.isort]
combine_as_imports = true
ensure_newline_before_comments = true
from_first = true
include_trailing_comma = true
multi_line_output = 3

[tool.ruff]
line-length = 79
target-version = "py38"
select = ["ANN", "B", "D", "E", "F", "Q", "UP", "W"]
ignore = [
  # Wat, type annotations for self and cls, why is this a thing?
  "ANN101",
  "ANN102",
  # Private annotations are fine to leave out.
  "ANN202",
  # I don't know how to more properly annotate "pass along all arguments".
  "ANN401",
  # raise SomeException(...) is fine.
  "B904",
  # It's fine to not have docstrings for magic methods.
  "D105",
  # This rule makes diffs uglier when expanding docstrings (and it's uglier)
  "D200",
  # No blank lines before docstrings.
  "D203",
  # Start docstrings on the second line.
  "D212",
  # This rule misses sassy docstrings ending with ! or ?.
  "D400",
  # Section headers should end with a colon not a newline
  "D406",
  # Underlines aren't needed
  "D407",
  # Plz spaces after section headers
  "D412",
  # We support 3.8 + 3.9
  "UP007",
]
extend-exclude = ["suite"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.per-file-ignores]
"docs/*" = ["ANN", "D"]
"jsonschema_specifications/tests/*" = ["ANN", "D"]
"noxfile.py" = ["ANN", "D"]
